dotnetcore-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnetcore-service
spec:
  type: ClusterIP
  selector:
    app: dotnetcore
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
